# maillist-to-rss

./: .gitignore  default-config.yaml  pyproject.toml  tailwind.config.js
m2rss/: appkeys.py  config.py  db_migrations.py  routes.py  rss.py
m2rss/cli/: __init__.py  aliases.py  commands.py  email.py  server.py
m2rss/data/: emails.py
m2rss/handlers/: error.py  feed.py
m2rss/migrations/: 0_create_migration_table.sql  3_add_mail_fields.sql  4_rename_alias_pass_to_alias.sql  5_add_formatted_body_in_emails.sql
m2rss/static/: output.css  style.css
m2rss/templates/: error.html  feed.html  feed.xml  item.html
maillist_to_rss/: __init__.py  config.py
migrations/: 1_mail_table.sql  2_create_alia_table.sql
